force-app/main/default/objects/Transactions__c/Transactions__c.object-meta.xml
<CustomObject>
    <label>Transactions</label>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>