force-app/main/default/objects/Transactions__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>