force-app/main/default/objects/Transactions__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>MONTH(Date__c)</formula>
    <label>Month</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>